<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="0dp"
    app:cardCornerRadius="0dp"
    android:screenOrientation="portrait"
    android:id="@+id/recycler_accounts"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/account_recycler_header_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:id="@+id/account_recycler_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="viewStart"
                android:textSize="20sp"
                android:text="@string/header"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:padding="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:background="@drawable/border_simple"
            android:id="@+id/account_recycler_tapping_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="80"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/account_recycler_acc_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sample"
                    android:textSize="16sp"/>

                <TextView
                    android:layout_marginStart="10dp"
                    android:id="@+id/account_recycler_acc_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sample_curl"
                    android:textSize="14sp"/>
            </LinearLayout>

            <TextView
                android:id="@+id/account_recycler_acc_balance"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="20"
                android:text="@string/sample_number"
                android:textAlignment="center"
                android:textSize="14sp"/>

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>