<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:screenOrientation="portrait"
    tools:context=".TransactionList">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/transaction_toolBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/transaction_toolBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <ImageView
                android:id="@+id/transaction_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/double_click_to_navigate_back_to_home_screen"
                android:src="@drawable/ic_back" />

            <TextView
                android:id="@+id/transaction_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_centerInParent="true"
        android:id="@+id/transaction_loader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="20dp"
        android:visibility="gone"
        android:orientation="vertical">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/loading"
            android:textStyle="bold"
            android:textSize="16sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/transaction_main_linear_layout"
        android:layout_below="@+id/transaction_toolBarLayout"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="false"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="10dp">

            <TextView
                android:id="@+id/transaction_acc_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample"
                android:textColor="@color/black"
                android:textSize="24sp"/>

            <TextView
                android:id="@+id/transaction_acc_number"
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample"
                android:textSize="14sp"/>

            <TextView
                android:layout_marginTop="10dp"
                android:id="@+id/transaction_acc_balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample"
                android:textColor="@color/black"
                android:textSize="19sp"/>

        </LinearLayout>

    <View
        android:layout_below="@+id/transaction_main_linear_layout"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="false"
        android:id="@+id/transaction_divider"
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:layout_below="@+id/transaction_divider"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="false"
        android:id="@+id/transaction_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/transactions"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textAlignment="center"/>

    <View
        android:layout_below="@+id/transaction_text"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="false"
        android:id="@+id/transaction_divider2"
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="?android:attr/listDivider" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_below="@+id/transaction_divider2"
        android:id="@+id/transaction_recycler_view"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:id="@+id/transaction_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:padding="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unable_to_fetch_kindly_retry"
            android:textColor="#FF0000"/>

        <Button
            android:layout_marginTop="20dp"
            android:id="@+id/transaction_retry_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/retry"/>

    </LinearLayout>

    <TextView
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_centerInParent="true"
        android:id="@+id/transaction_no_tra_to_display"
        android:text="@string/no_transaction_to_display"/>

</RelativeLayout>